Updated <GlobalVar: None aOpen; @1573 len=5>

--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:37.624326Z
-last_push_artifact = 0x5ed
+last_push_time = 2023-12-11T18:27:37.639712Z
+last_push_artifact = 0x625
 last_push_artifact_type = "global variable"
