--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,8 +1,8 @@
-[0x5ed]
-last_change = 2023-12-11T18:27:37.624326Z
-addr = 0x5ed
-name = "aStdin"
-size = 0x6
+[0x625]
+last_change = 2023-12-11T18:27:37.639712Z
+addr = 0x625
+name = "aOpen"
+size = 0x5
 
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
