--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,9 +1,3 @@
-[0x3b0]
-last_change = 2023-12-11T18:27:37.130757Z
-addr = 0x3b0
-name = "elf_gnu_hash_indexes"
-size = 0x8
-
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -20,4 +14,10 @@ size = 0x1f
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
+size = 0x1
+
+[0x50f0]
+last_change = 2023-12-11T18:27:37.144553Z
+addr = 0x50f0
+name = "_ITM_registerTMCloneTable"
 size = 0x1
