--- a/structs/Elf64_Sym.toml
+++ b/structs/Elf64_Sym.toml
@@ -1,40 +1,10 @@
 [metadata]
 name = "Elf64_Sym"
-size = 0x18
-last_change = 2023-12-11T18:27:37.566512Z
+size = 0x8
+last_change = 2023-12-10T08:12:32.169516Z
 
 [members.0x0]
 name = "st_name"
 offset = 0x0
-type = "unsigned int"
+type = ""
 size = 0x4
-
-[members.0x4]
-name = "st_info"
-offset = 0x4
-type = "unsigned char"
-size = 0x1
-
-[members.0x5]
-name = "st_other"
-offset = 0x5
-type = "unsigned char"
-size = 0x1
-
-[members.0x6]
-name = "st_shndx"
-offset = 0x6
-type = "unsigned short"
-size = 0x2
-
-[members.0x8]
-name = "st_value"
-offset = 0x8
-type = "unsigned long"
-size = 0x8
-
-[members.0x10]
-name = "st_size"
-offset = 0x10
-type = "unsigned long"
-size = 0x8
