--- a/global_vars.toml
+++ b/global_vars.toml
@@ -10,11 +10,11 @@ addr = 0x2548
 name = "aSZombienatorCr"
 size = 0x1f
 
-[0x3443]
-last_change = 2023-12-11T18:27:37.356656Z
-addr = 0x3443
-name = "file"
-size = 0x6
+[0x3085]
+last_change = 2023-12-11T18:27:37.370366Z
+addr = 0x3085
+name = "format"
+size = 0x18
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
