--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,9 +1,3 @@
-[0x64a]
-last_change = 2023-12-11T18:27:37.581426Z
-addr = 0x64a
-name = "aLibcStartMain"
-size = 0x12
-
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -15,6 +9,12 @@ last_change = 2023-12-10T08:13:37.912710Z
 addr = 0x2548
 name = "aSZombienatorCr"
 size = 0x1f
+
+[0x31b8]
+last_change = 2023-12-11T18:27:37.596481Z
+addr = 0x31b8
+name = "aThisMeansThatW"
+size = 0x47
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
