--- a/functions/000050d8.toml
+++ b/functions/000050d8.toml
@@ -1,4 +1,9 @@
 [metadata]
 addr = 0x50d8
 size = 0x8
-last_change = 2023-12-11T18:27:37.412246Z
+last_change = 2023-12-11T18:27:37.426461Z
+
+[header]
+last_change = 2023-12-11T18:27:37.426461Z
+name = "__imp___cxa_finalize"
+addr = 0x50d8
