--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:38.021220Z
-last_push_artifact = "Elf64_Rela"
-last_push_artifact_type = "struct"
+last_push_time = 2023-12-11T18:27:38.036679Z
+last_push_artifact = 0x11b0
+last_push_artifact_type = "global variable"
