Updated <GlobalVar: None setvbuf_ptr; @20400 len=8>

--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:38.718993Z
-last_push_artifact = 0x3260
+last_push_time = 2023-12-11T18:27:38.735228Z
+last_push_artifact = 0x4fb0
 last_push_artifact_type = "global variable"
