--- a/structs/Elf64_Rela.toml
+++ b/structs/Elf64_Rela.toml
@@ -1,6 +1,10 @@
 [metadata]
 name = "Elf64_Rela"
-size = 0x0
-last_change = 2023-12-11T18:27:38.461262Z
+size = 0x8
+last_change = 2023-12-10T08:13:30.958906Z
 
-[members]
+[members.0x0]
+name = "r_offset"
+offset = 0x0
+type = ""
+size = 0x8
