--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:38.794917Z
-last_push_artifact = 0x222d
-last_push_artifact_type = "function"
+last_push_time = 2023-12-11T18:27:38.810055Z
+last_push_artifact = 0x32a8
+last_push_artifact_type = "global variable"
