--- a/global_vars.toml
+++ b/global_vars.toml
@@ -10,11 +10,11 @@ addr = 0x2548
 name = "aSZombienatorCr"
 size = 0x1f
 
-[0x35d8]
-last_change = 2023-12-11T18:27:38.704122Z
-addr = 0x35d8
-name = "aTheSavedFrameP"
-size = 0x2e
+[0x3260]
+last_change = 2023-12-11T18:27:38.718993Z
+addr = 0x3260
+name = "aTheInputBuffer"
+size = 0x41
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
