--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:38.660206Z
-last_push_artifact = 0x820
-last_push_artifact_type = "comment"
+last_push_time = 2023-12-11T18:27:38.675164Z
+last_push_artifact = 0x222d
+last_push_artifact_type = "function"
