--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:38.176843Z
-last_push_artifact = 0x34d8
+last_push_time = 2023-12-11T18:27:38.191707Z
+last_push_artifact = 0x33f0
 last_push_artifact_type = "global variable"
