--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:38.237749Z
-last_push_artifact = 0x30f0
+last_push_time = 2023-12-11T18:27:38.255568Z
+last_push_artifact = 0x3069
 last_push_artifact_type = "global variable"
