--- a/global_vars.toml
+++ b/global_vars.toml
@@ -10,14 +10,14 @@ addr = 0x2548
 name = "aSZombienatorCr"
 size = 0x1f
 
-[0x3076]
-last_change = 2023-12-11T18:27:38.568910Z
-addr = 0x3076
-name = "aStackLocation"
-size = 0xf
-
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
+
+[0x4fa8]
+last_change = 2023-12-11T18:27:38.585632Z
+addr = 0x4fa8
+name = "read_ptr"
+size = 0x8
