--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:38.568910Z
-last_push_artifact = 0x3076
+last_push_time = 2023-12-11T18:27:38.585632Z
+last_push_artifact = 0x4fa8
 last_push_artifact_type = "global variable"
