--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,3 +1,9 @@
+[0x6a7]
+last_change = 2023-12-11T18:27:38.509321Z
+addr = 0x6a7
+name = "aItmRegistertmc"
+size = 0x1a
+
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
