--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:38.493419Z
-last_push_artifact = 0x222d
-last_push_artifact_type = "function"
+last_push_time = 2023-12-11T18:27:38.509321Z
+last_push_artifact = 0x6a7
+last_push_artifact_type = "global variable"
