--- a/global_vars.toml
+++ b/global_vars.toml
@@ -10,6 +10,12 @@ addr = 0x2548
 name = "aSZombienatorCr"
 size = 0x1f
 
+[0x3648]
+last_change = 2023-12-11T18:27:38.146416Z
+addr = 0x3648
+name = "aTheSavedReturn_0"
+size = 0x33
+
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
