--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:38.129715Z
-last_push_artifact = 0x10f0
-last_push_artifact_type = "function"
+last_push_time = 2023-12-11T18:27:38.146416Z
+last_push_artifact = 0x3648
+last_push_artifact_type = "global variable"
