--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,9 +1,3 @@
-[0x6a7]
-last_change = 2023-12-11T18:27:38.509321Z
-addr = 0x6a7
-name = "aItmRegistertmc"
-size = 0x1a
-
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -15,6 +9,12 @@ last_change = 2023-12-10T08:13:37.912710Z
 addr = 0x2548
 name = "aSZombienatorCr"
 size = 0x1f
+
+[0x35b0]
+last_change = 2023-12-11T18:27:38.525527Z
+addr = 0x35b0
+name = "aTheInputBuffer_0"
+size = 0x21
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
