--- a/global_vars.toml
+++ b/global_vars.toml
@@ -10,14 +10,14 @@ addr = 0x2548
 name = "aSZombienatorCr"
 size = 0x1f
 
-[0x3069]
-last_change = 2023-12-11T18:27:38.255568Z
-addr = 0x3069
-name = "aDataBytes"
-size = 0xd
-
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
+size = 0x1
+
+[0x5088]
+last_change = 2023-12-11T18:27:38.271776Z
+addr = 0x5088
+name = "__stack_chk_fail"
 size = 0x1
