Updated <GlobalVar: None s; @12296 len=83>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -10,6 +10,12 @@ addr = 0x2548
 name = "aSZombienatorCr"
 size = 0x1f
 
+[0x3008]
+last_change = 2023-12-11T18:27:38.840572Z
+addr = 0x3008
+name = "s"
+size = 0x53
+
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
