--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,8 +1,8 @@
-[0x3c4]
-last_change = 2023-12-11T18:27:38.411762Z
-addr = 0x3c4
-name = "elf_gnu_hash_chain"
-size = 0x1
+[0x3a8]
+last_change = 2023-12-11T18:27:38.428109Z
+addr = 0x3a8
+name = "elf_gnu_hash_bitmask_nwords"
+size = 0x4
 
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
