Updated <GlobalVar: None __errno_location_ptr; @20352 len=8>

--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:38.288150Z
-last_push_artifact = 0x4fa0
+last_push_time = 2023-12-11T18:27:38.303162Z
+last_push_artifact = 0x4f80
 last_push_artifact_type = "global variable"
