--- a/global_vars.toml
+++ b/global_vars.toml
@@ -10,11 +10,11 @@ addr = 0x2548
 name = "aSZombienatorCr"
 size = 0x1f
 
-[0x33f0]
-last_change = 2023-12-11T18:27:38.191707Z
-addr = 0x33f0
-name = "aHoweverAtNoPoi"
-size = 0x53
+[0x32f8]
+last_change = 2023-12-11T18:27:38.206593Z
+addr = 0x32f8
+name = "aYourInputWillB"
+size = 0x2a
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
