--- a/global_vars.toml
+++ b/global_vars.toml
@@ -10,11 +10,11 @@ addr = 0x2548
 name = "aSZombienatorCr"
 size = 0x1f
 
-[0x3590]
-last_change = 2023-12-11T18:27:38.161885Z
-addr = 0x3590
-name = "aTheProgramSMem"
-size = 0x1d
+[0x34d8]
+last_change = 2023-12-11T18:27:38.176843Z
+addr = 0x34d8
+name = "aRightUpToButNo"
+size = 0x56
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
