Updated <GlobalVar: None aFlag; @13379 len=6>

--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:38.525527Z
-last_push_artifact = 0x35b0
+last_push_time = 2023-12-11T18:27:38.539279Z
+last_push_artifact = 0x3443
 last_push_artifact_type = "global variable"
