--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:38.840572Z
-last_push_artifact = 0x3008
-last_push_artifact_type = "global variable"
+last_push_time = 2023-12-11T18:30:06.023376Z
+last_push_artifact = 0x222d
+last_push_artifact_type = "function"
