Updated <StackVar: void * flag_buf; -0x160@0x222d>

--- a/functions/0000222d.toml
+++ b/functions/0000222d.toml
@@ -1,7 +1,7 @@
 [metadata]
 addr = 0x222d
 size = 0x470
-last_change = 2023-12-11T18:30:06.023376Z
+last_change = 2023-12-11T18:30:19.553438Z
 
 [stack_vars.-0x170]
 last_change = 2023-12-11T18:27:38.794917Z
@@ -17,4 +17,12 @@ offset = -344
 name = "flag_buffer"
 type = "char[328]"
 size = 0x148
+addr = 0x222d
+
+[stack_vars.-0x160]
+last_change = 2023-12-11T18:30:19.553438Z
+offset = -352
+name = "flag_buf"
+type = "void *"
+size = 0x8
 addr = 0x222d
