Updated <GlobalVar: None _end; @20528 len=1>

--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:30:19.553438Z
-last_push_artifact = 0x222d
-last_push_artifact_type = "function"
+last_push_time = 2023-12-11T18:40:37.937013Z
+last_push_artifact = 0x5030
+last_push_artifact_type = "global variable"
