--- a/global_vars.toml
+++ b/global_vars.toml
@@ -21,3 +21,9 @@ last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
+
+[0x5030]
+last_change = 2023-12-11T18:40:37.937013Z
+addr = 0x5030
+name = "_end"
+size = 0x1
