--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,12 +4,6 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x11c0]
-last_change = 2023-12-11T18:40:37.955650Z
-addr = 0x11c0
-name = "_start"
-size = 0x1
-
 [0x2548]
 last_change = 2023-12-10T08:13:37.912710Z
 addr = 0x2548
@@ -25,5 +19,11 @@ size = 0x53
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
+name = "__cxa_finalize"
+size = 0x1
+
+[0x50a0]
+last_change = 2023-12-11T18:40:37.974802Z
+addr = 0x50a0
 name = "__cxa_finalize"
 size = 0x1
