Updated <Function: @0x223d len=0x197>

--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:40:38.218646Z
-last_push_artifact = 0x3093
-last_push_artifact_type = "global variable"
+last_push_time = 2023-12-11T18:40:38.235854Z
+last_push_artifact = 0x223d
+last_push_artifact_type = "function"
