--- a/global_vars.toml
+++ b/global_vars.toml
@@ -10,12 +10,6 @@ addr = 0x2548
 name = "aSZombienatorCr"
 size = 0x1f
 
-[0x2568]
-last_change = 2023-12-11T18:40:38.670326Z
-addr = 0x2568
-name = "_fini"
-size = 0x1
-
 [0x3008]
 last_change = 2023-12-11T18:27:38.840572Z
 addr = 0x3008
@@ -26,4 +20,10 @@ size = 0x53
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
+size = 0x1
+
+[0x5080]
+last_change = 2023-12-11T18:40:38.687823Z
+addr = 0x5080
+name = "open"
 size = 0x1
