--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,3 +1,9 @@
+[0x608]
+last_change = 2023-12-11T18:40:38.019487Z
+addr = 0x608
+name = "aErrnoLocation"
+size = 0x11
+
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -21,9 +27,3 @@ last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
-
-[0x4ff8]
-last_change = 2023-12-11T18:40:37.999895Z
-addr = 0x4ff8
-name = "__cxa_finalize_ptr"
-size = 0x8
