--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:40:37.999895Z
-last_push_artifact = 0x4ff8
+last_push_time = 2023-12-11T18:40:38.019487Z
+last_push_artifact = 0x608
 last_push_artifact_type = "global variable"
