--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:40:38.133155Z
-last_push_artifact = 0x10f0
-last_push_artifact_type = "function"
+last_push_time = 2023-12-11T18:40:38.151586Z
+last_push_artifact = 0x4f70
+last_push_artifact_type = "global variable"
