--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,14 +1,14 @@
+[0x344]
+last_change = 2023-12-11T18:40:38.720763Z
+addr = 0x344
+name = "aGnu"
+size = 0x4
+
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
 name = "aFclose"
 size = 0x7
-
-[0x11f0]
-last_change = 2023-12-11T18:40:38.704552Z
-addr = 0x11f0
-name = "deregister_tm_clones"
-size = 0x1
 
 [0x2548]
 last_change = 2023-12-10T08:13:37.912710Z
