--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,3 +1,9 @@
+[0x5e5]
+last_change = 2023-12-11T18:40:38.908773Z
+addr = 0x5e5
+name = "aPutchar"
+size = 0x8
+
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -9,12 +15,6 @@ last_change = 2023-12-10T08:13:37.912710Z
 addr = 0x2548
 name = "aSZombienatorCr"
 size = 0x1f
-
-[0x2560]
-last_change = 2023-12-11T18:40:38.891833Z
-addr = 0x2560
-name = "__libc_csu_fini"
-size = 0x1
 
 [0x3008]
 last_change = 2023-12-11T18:27:38.840572Z
