--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:40:38.891833Z
-last_push_artifact = 0x2560
+last_push_time = 2023-12-11T18:40:38.908773Z
+last_push_artifact = 0x5e5
 last_push_artifact_type = "global variable"
