--- a/global_vars.toml
+++ b/global_vars.toml
@@ -16,11 +16,11 @@ addr = 0x3008
 name = "s"
 size = 0x53
 
-[0x3074]
-last_change = 2023-12-11T18:40:38.371505Z
-addr = 0x3074
-name = "aYouSaidS"
-size = 0xe
+[0x3028]
+last_change = 2023-12-11T18:40:38.387376Z
+addr = 0x3028
+name = "aSendYourPayloa"
+size = 0x26
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
