--- a/global_vars.toml
+++ b/global_vars.toml
@@ -22,8 +22,8 @@ addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
 
-[0x50a0]
-last_change = 2023-12-11T18:40:37.974802Z
-addr = 0x50a0
-name = "__cxa_finalize"
-size = 0x1
+[0x4ff8]
+last_change = 2023-12-11T18:40:37.999895Z
+addr = 0x4ff8
+name = "__cxa_finalize_ptr"
+size = 0x8
