--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:40:38.452177Z
-last_push_artifact = 0x308b
+last_push_time = 2023-12-11T18:40:38.467030Z
+last_push_artifact = 0x4fc8
 last_push_artifact_type = "global variable"
