--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,3 +1,9 @@
+[0x64a]
+last_change = 2023-12-11T18:40:38.286158Z
+addr = 0x64a
+name = "aLibcStartMain"
+size = 0x12
+
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -20,10 +26,4 @@ size = 0x53
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
-size = 0x1
-
-[0x5028]
-last_change = 2023-12-11T18:40:38.269396Z
-addr = 0x5028
-name = "completed.8060"
 size = 0x1
