--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:40:38.320915Z
-last_push_artifact = 0x318
+last_push_time = 2023-12-11T18:40:38.338848Z
+last_push_artifact = 0x62a
 last_push_artifact_type = "global variable"
