--- a/functions/0000223d.toml
+++ b/functions/0000223d.toml
@@ -1,4 +1,12 @@
 [metadata]
 addr = 0x223d
 size = 0x197
-last_change = 2023-12-11T18:40:38.235854Z
+last_change = 2023-12-11T18:40:38.252548Z
+
+[stack_vars.-0x150]
+last_change = 2023-12-11T18:40:38.252548Z
+offset = -336
+name = "v6"
+type = "void *"
+size = 0x8
+addr = 0x223d
