--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,9 +1,3 @@
-[0x601]
-last_change = 2023-12-11T18:40:38.549485Z
-addr = 0x601
-name = "aPrintf"
-size = 0x7
-
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -26,4 +20,10 @@ size = 0x53
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
+size = 0x1
+
+[0x4d60]
+last_change = 2023-12-11T18:40:38.568321Z
+addr = 0x4d60
+name = "__frame_dummy_init_array_entry"
 size = 0x1
