--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:40:38.549485Z
-last_push_artifact = 0x601
+last_push_time = 2023-12-11T18:40:38.568321Z
+last_push_artifact = 0x4d60
 last_push_artifact_type = "global variable"
