--- a/global_vars.toml
+++ b/global_vars.toml
@@ -16,14 +16,14 @@ addr = 0x3008
 name = "s"
 size = 0x53
 
+[0x3093]
+last_change = 2023-12-11T18:40:38.218646Z
+addr = 0x3093
+name = "assertion"
+size = 0x9
+
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
-size = 0x1
-
-[0x5088]
-last_change = 2023-12-11T18:40:38.187105Z
-addr = 0x5088
-name = "__isoc99_scanf"
 size = 0x1
