Updated <GlobalVar: None __do_global_dtors_aux_fini_array_entry; @19816 len=1>

--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:40:38.942047Z
-last_push_artifact = 0x5068
+last_push_time = 2023-12-11T18:40:38.957896Z
+last_push_artifact = 0x4d68
 last_push_artifact_type = "global variable"
