Updated <GlobalVar: None __libc_start_main_ptr; @20448 len=8>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -22,8 +22,8 @@ addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
 
-[0x4fe8]
-last_change = 2023-12-11T18:40:38.482026Z
-addr = 0x4fe8
-name = "__gmon_start___ptr"
+[0x4fe0]
+last_change = 2023-12-11T18:40:38.498153Z
+addr = 0x4fe0
+name = "__libc_start_main_ptr"
 size = 0x8
