Updated <GlobalVar: None aWelcomeToS; @12448 len=20>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,12 +4,6 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x23d4]
-last_change = 2023-12-11T18:40:38.056717Z
-addr = 0x23d4
-name = "main"
-size = 0x1
-
 [0x2548]
 last_change = 2023-12-10T08:13:37.912710Z
 addr = 0x2548
@@ -21,6 +15,12 @@ last_change = 2023-12-11T18:27:38.840572Z
 addr = 0x3008
 name = "s"
 size = 0x53
+
+[0x30a0]
+last_change = 2023-12-11T18:40:38.075740Z
+addr = 0x30a0
+name = "aWelcomeToS"
+size = 0x14
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
