--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:40:38.056717Z
-last_push_artifact = 0x23d4
+last_push_time = 2023-12-11T18:40:38.075740Z
+last_push_artifact = 0x30a0
 last_push_artifact_type = "global variable"
