--- a/global_vars.toml
+++ b/global_vars.toml
@@ -22,8 +22,8 @@ addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
 
-[0x4d60]
-last_change = 2023-12-11T18:40:38.568321Z
-addr = 0x4d60
-name = "__frame_dummy_init_array_entry"
-size = 0x1
+[0x4f88]
+last_change = 2023-12-11T18:40:38.586636Z
+addr = 0x4f88
+name = "puts_ptr"
+size = 0x8
