--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:40:38.514022Z
-last_push_artifact = 0x4fb8
+last_push_time = 2023-12-11T18:40:38.531071Z
+last_push_artifact = 0x5078
 last_push_artifact_type = "global variable"
