--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:40:38.094283Z
-last_push_artifact = 0x4fd0
+last_push_time = 2023-12-11T18:40:38.111994Z
+last_push_artifact = 0x4fc0
 last_push_artifact_type = "global variable"
