Updated <GlobalVar: None aStdin_0; @12427 len=8>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -16,14 +16,14 @@ addr = 0x3008
 name = "s"
 size = 0x53
 
+[0x308b]
+last_change = 2023-12-11T18:40:38.452177Z
+addr = 0x308b
+name = "aStdin_0"
+size = 0x8
+
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
-size = 0x1
-
-[0x5020]
-last_change = 2023-12-11T18:40:38.435420Z
-addr = 0x5020
-name = "stdin@@GLIBC_2.2.5"
 size = 0x1
