--- a/global_vars.toml
+++ b/global_vars.toml
@@ -22,8 +22,8 @@ addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
 
-[0x4fe0]
-last_change = 2023-12-11T18:40:38.498153Z
-addr = 0x4fe0
-name = "__libc_start_main_ptr"
+[0x4fb8]
+last_change = 2023-12-11T18:40:38.514022Z
+addr = 0x4fb8
+name = "open_ptr"
 size = 0x8
