--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,3 +1,9 @@
+[0x625]
+last_change = 2023-12-11T18:40:38.653516Z
+addr = 0x625
+name = "aOpen"
+size = 0x5
+
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -20,10 +26,4 @@ size = 0x53
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
-size = 0x1
-
-[0x4d70]
-last_change = 2023-12-11T18:40:38.636847Z
-addr = 0x4d70
-name = "_DYNAMIC"
 size = 0x1
