--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,3 +1,9 @@
+[0x601]
+last_change = 2023-12-11T18:40:38.549485Z
+addr = 0x601
+name = "aPrintf"
+size = 0x7
+
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -20,10 +26,4 @@ size = 0x53
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
-size = 0x1
-
-[0x5078]
-last_change = 2023-12-11T18:40:38.531071Z
-addr = 0x5078
-name = "setvbuf"
 size = 0x1
