--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,14 +1,14 @@
-[0x5bb]
-last_change = 2023-12-11T18:40:38.812909Z
-addr = 0x5bb
-name = "aExit"
-size = 0x5
-
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
 name = "aFclose"
 size = 0x7
+
+[0x1000]
+last_change = 2023-12-11T18:40:38.827902Z
+addr = 0x1000
+name = "_init"
+size = 0x1
 
 [0x2548]
 last_change = 2023-12-10T08:13:37.912710Z
