Updated <GlobalVar: None __GNU_EH_FRAME_HDR; @12476 len=1>

--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:40:38.403784Z
-last_push_artifact = 0x5090
+last_push_time = 2023-12-11T18:40:38.419334Z
+last_push_artifact = 0x30bc
 last_push_artifact_type = "global variable"
