Updated <GlobalVar: None aRead; @1561 len=5>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,8 +1,8 @@
-[0x608]
-last_change = 2023-12-11T18:40:38.019487Z
-addr = 0x608
-name = "aErrnoLocation"
-size = 0x11
+[0x619]
+last_change = 2023-12-11T18:40:38.039074Z
+addr = 0x619
+name = "aRead"
+size = 0x5
 
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
