Updated <GlobalVar: None __errno_location; @20544 len=1>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -21,3 +21,9 @@ last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
+
+[0x5040]
+last_change = 2023-12-11T18:40:39.055412Z
+addr = 0x5040
+name = "__errno_location"
+size = 0x1
