--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,12 +4,6 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x1170]
-last_change = 2023-12-11T18:40:39.006290Z
-addr = 0x1170
-name = ".setvbuf"
-size = 0x1
-
 [0x2548]
 last_change = 2023-12-10T08:13:37.912710Z
 addr = 0x2548
@@ -26,4 +20,10 @@ size = 0x53
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
+size = 0x1
+
+[0x5038]
+last_change = 2023-12-11T18:40:39.022272Z
+addr = 0x5038
+name = "putchar"
 size = 0x1
