--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,10 +4,10 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x1150]
-last_change = 2023-12-11T18:40:39.073795Z
-addr = 0x1150
-name = ".__assert_fail"
+[0x12a0]
+last_change = 2023-12-11T18:40:39.101162Z
+addr = 0x12a0
+name = "frame_dummy"
 size = 0x1
 
 [0x2548]
@@ -26,4 +26,10 @@ size = 0x53
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
+size = 0x1
+
+[0x5040]
+last_change = 2023-12-11T18:40:39.055412Z
+addr = 0x5040
+name = "__errno_location"
 size = 0x1
