Updated <Comment: @0x4d60 len=41>

--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:40:39.022272Z
-last_push_artifact = 0x5038
-last_push_artifact_type = "global variable"
+last_push_time = 2023-12-11T18:40:39.037979Z
+last_push_artifact = 0x4d60
+last_push_artifact_type = "comment"
