--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,6 +4,12 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
+[0x1150]
+last_change = 2023-12-11T18:40:39.073795Z
+addr = 0x1150
+name = ".__assert_fail"
+size = 0x1
+
 [0x2548]
 last_change = 2023-12-10T08:13:37.912710Z
 addr = 0x2548
@@ -20,10 +26,4 @@ size = 0x53
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
-size = 0x1
-
-[0x5040]
-last_change = 2023-12-11T18:40:39.055412Z
-addr = 0x5040
-name = "__errno_location"
 size = 0x1
