Updated <GlobalVar: None puts; @20552 len=1>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,12 +4,6 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x12a9]
-last_change = 2023-12-11T18:40:41.707456Z
-addr = 0x12a9
-name = "bin_padding"
-size = 0x1
-
 [0x2548]
 last_change = 2023-12-10T08:13:37.912710Z
 addr = 0x2548
@@ -32,4 +26,10 @@ size = 0x1
 last_change = 2023-12-11T18:40:39.055412Z
 addr = 0x5040
 name = "__errno_location"
+size = 0x1
+
+[0x5048]
+last_change = 2023-12-11T18:40:41.724651Z
+addr = 0x5048
+name = "puts"
 size = 0x1
