Updated <GlobalVar: None __data_start; @20480 len=1>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -22,10 +22,10 @@ addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
 
-[0x5010]
-last_change = 2023-12-11T18:40:41.908478Z
-addr = 0x5010
-name = "_edata"
+[0x5000]
+last_change = 2023-12-11T18:40:41.925305Z
+addr = 0x5000
+name = "__data_start"
 size = 0x1
 
 [0x5040]
