--- a/global_vars.toml
+++ b/global_vars.toml
@@ -16,16 +16,16 @@ addr = 0x3008
 name = "s"
 size = 0x53
 
+[0x3254]
+last_change = 2023-12-11T18:40:41.942344Z
+addr = 0x3254
+name = "__FRAME_END__"
+size = 0x1
+
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
-size = 0x1
-
-[0x5000]
-last_change = 2023-12-11T18:40:41.925305Z
-addr = 0x5000
-name = "__data_start"
 size = 0x1
 
 [0x5040]
