Updated <GlobalVar: None __gmon_start__; @20656 len=1>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -27,3 +27,9 @@ last_change = 2023-12-11T18:40:39.055412Z
 addr = 0x5040
 name = "__errno_location"
 size = 0x1
+
+[0x50b0]
+last_change = 2023-12-11T18:40:41.775859Z
+addr = 0x50b0
+name = "__gmon_start__"
+size = 0x1
