--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:40:41.759684Z
-last_push_artifact = "Elf64_Rela"
-last_push_artifact_type = "struct"
+last_push_time = 2023-12-11T18:40:41.775859Z
+last_push_artifact = 0x50b0
+last_push_artifact_type = "global variable"
