--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,10 +4,10 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x1190]
-last_change = 2023-12-11T18:40:41.689331Z
-addr = 0x1190
-name = ".__isoc99_scanf"
+[0x12a9]
+last_change = 2023-12-11T18:40:41.707456Z
+addr = 0x12a9
+name = "bin_padding"
 size = 0x1
 
 [0x2548]
