--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:40:41.689331Z
-last_push_artifact = 0x1190
+last_push_time = 2023-12-11T18:40:41.707456Z
+last_push_artifact = 0x12a9
 last_push_artifact_type = "global variable"
