--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,9 +1,3 @@
-[0x3ac]
-last_change = 2023-12-11T18:40:39.118548Z
-addr = 0x3ac
-name = "elf_gnu_hash_shift"
-size = 0x4
-
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -32,4 +26,10 @@ size = 0x1
 last_change = 2023-12-11T18:40:39.055412Z
 addr = 0x5040
 name = "__errno_location"
+size = 0x1
+
+[0x5070]
+last_change = 2023-12-11T18:40:41.639963Z
+addr = 0x5070
+name = "__libc_start_main"
 size = 0x1
