--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:40:39.118548Z
-last_push_artifact = 0x3ac
+last_push_time = 2023-12-11T18:40:41.639963Z
+last_push_artifact = 0x5070
 last_push_artifact_type = "global variable"
