--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,12 +4,6 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x24f0]
-last_change = 2023-12-11T18:40:41.841379Z
-addr = 0x24f0
-name = "__libc_csu_init"
-size = 0x1
-
 [0x2548]
 last_change = 2023-12-10T08:13:37.912710Z
 addr = 0x2548
@@ -32,4 +26,10 @@ size = 0x1
 last_change = 2023-12-11T18:40:39.055412Z
 addr = 0x5040
 name = "__errno_location"
+size = 0x1
+
+[0x50a8]
+last_change = 2023-12-11T18:40:41.859084Z
+addr = 0x50a8
+name = "_ITM_deregisterTMCloneTable"
 size = 0x1
