--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:40:41.958867Z
-last_push_artifact = 0x1110
+last_push_time = 2023-12-11T18:40:41.975246Z
+last_push_artifact = 0x223d
 last_push_artifact_type = "global variable"
