Updated <GlobalVar: None __dso_handle; @20488 len=1>

--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:40:41.859084Z
-last_push_artifact = 0x50a8
+last_push_time = 2023-12-11T18:40:41.875828Z
+last_push_artifact = 0x5008
 last_push_artifact_type = "global variable"
