--- a/global_vars.toml
+++ b/global_vars.toml
@@ -22,14 +22,14 @@ addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
 
+[0x5008]
+last_change = 2023-12-11T18:40:41.875828Z
+addr = 0x5008
+name = "__dso_handle"
+size = 0x1
+
 [0x5040]
 last_change = 2023-12-11T18:40:39.055412Z
 addr = 0x5040
 name = "__errno_location"
-size = 0x1
-
-[0x50a8]
-last_change = 2023-12-11T18:40:41.859084Z
-addr = 0x50a8
-name = "_ITM_deregisterTMCloneTable"
 size = 0x1
