Updated <GlobalVar: None .__errno_location; @4368 len=1>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,6 +4,12 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
+[0x1110]
+last_change = 2023-12-11T18:40:41.958867Z
+addr = 0x1110
+name = ".__errno_location"
+size = 0x1
+
 [0x2548]
 last_change = 2023-12-10T08:13:37.912710Z
 addr = 0x2548
@@ -15,12 +21,6 @@ last_change = 2023-12-11T18:27:38.840572Z
 addr = 0x3008
 name = "s"
 size = 0x53
-
-[0x3254]
-last_change = 2023-12-11T18:40:41.942344Z
-addr = 0x3254
-name = "__FRAME_END__"
-size = 0x1
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
