Updated <GlobalVar: None _IO_stdin_used; @12288 len=1>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -10,6 +10,12 @@ addr = 0x2548
 name = "aSZombienatorCr"
 size = 0x1f
 
+[0x3000]
+last_change = 2023-12-11T18:40:41.808711Z
+addr = 0x3000
+name = "_IO_stdin_used"
+size = 0x1
+
 [0x3008]
 last_change = 2023-12-11T18:27:38.840572Z
 addr = 0x3008
@@ -26,10 +32,4 @@ size = 0x1
 last_change = 2023-12-11T18:40:39.055412Z
 addr = 0x5040
 name = "__errno_location"
-size = 0x1
-
-[0x50b8]
-last_change = 2023-12-11T18:40:41.792126Z
-addr = 0x50b8
-name = "_ITM_registerTMCloneTable"
 size = 0x1
