--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:40:41.792126Z
-last_push_artifact = 0x50b8
+last_push_time = 2023-12-11T18:40:41.808711Z
+last_push_artifact = 0x3000
 last_push_artifact_type = "global variable"
