Updated <GlobalVar: None aGlibc225; @1648 len=12>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,3 +1,9 @@
+[0x670]
+last_change = 2023-12-11T18:40:42.076208Z
+addr = 0x670
+name = "aGlibc225"
+size = 0xc
+
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
