Updated <GlobalVar: None aLibcSo6; @1457 len=10>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,3 +1,9 @@
+[0x5b1]
+last_change = 2023-12-11T18:40:42.424106Z
+addr = 0x5b1
+name = "aLibcSo6"
+size = 0xa
+
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
