Updated <GlobalVar: None aStdout; @1566 len=7>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,3 +1,9 @@
+[0x61e]
+last_change = 2023-12-11T18:40:42.214930Z
+addr = 0x61e
+name = "aStdout"
+size = 0x7
+
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -21,12 +27,6 @@ last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
-
-[0x4fd8]
-last_change = 2023-12-11T18:40:42.197665Z
-addr = 0x4fd8
-name = "_ITM_deregisterTMCloneTable_ptr"
-size = 0x8
 
 [0x5040]
 last_change = 2023-12-11T18:40:39.055412Z
