--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:40:42.510221Z
-last_push_artifact = 0x3b0
+last_push_time = 2023-12-11T18:40:42.526671Z
+last_push_artifact = 0x3a8
 last_push_artifact_type = "global variable"
