Updated <GlobalVar: None aGlibc24; @1638 len=10>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,3 +1,9 @@
+[0x666]
+last_change = 2023-12-11T18:40:42.722677Z
+addr = 0x666
+name = "aGlibc24"
+size = 0xa
+
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -20,12 +26,6 @@ size = 0x53
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
-size = 0x1
-
-[0x5010]
-last_change = 2023-12-11T18:40:42.705779Z
-addr = 0x5010
-name = "__bss_start"
 size = 0x1
 
 [0x5040]
