--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,3 +1,9 @@
+[0x3a0]
+last_change = 2023-12-11T18:40:42.851400Z
+addr = 0x3a0
+name = "elf_gnu_hash_nbuckets"
+size = 0x4
+
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -21,12 +27,6 @@ last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
-
-[0x4f98]
-last_change = 2023-12-11T18:40:42.835925Z
-addr = 0x4f98
-name = "printf_ptr"
-size = 0x8
 
 [0x5040]
 last_change = 2023-12-11T18:40:39.055412Z
