--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:40:42.266507Z
-last_push_artifact = 0x698
+last_push_time = 2023-12-11T18:40:42.284614Z
+last_push_artifact = 0x5f3
 last_push_artifact_type = "global variable"
