Updated <GlobalVar: None __bss_start; @20496 len=1>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,9 +1,3 @@
-[0x6a7]
-last_change = 2023-12-11T18:40:42.689084Z
-addr = 0x6a7
-name = "aItmRegistertmc"
-size = 0x1a
-
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -26,6 +20,12 @@ size = 0x53
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
+size = 0x1
+
+[0x5010]
+last_change = 2023-12-11T18:40:42.705779Z
+addr = 0x5010
+name = "__bss_start"
 size = 0x1
 
 [0x5040]
