--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:40:42.689084Z
-last_push_artifact = 0x6a7
+last_push_time = 2023-12-11T18:40:42.705779Z
+last_push_artifact = 0x5010
 last_push_artifact_type = "global variable"
