Updated <GlobalVar: None aLu; @12317 len=4>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -16,11 +16,11 @@ addr = 0x3008
 name = "s"
 size = 0x53
 
-[0x300e]
-last_change = 2023-12-11T18:40:42.739907Z
-addr = 0x300e
-name = "format"
-size = 0xf
+[0x301d]
+last_change = 2023-12-11T18:40:42.756458Z
+addr = 0x301d
+name = "aLu"
+size = 0x4
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
