Updated <Comment: @0x820 len=27>

--- a/comments.toml
+++ b/comments.toml
@@ -1,3 +1,9 @@
+[0x820]
+last_change = 2023-12-11T18:40:43.315296Z
+addr = 0x820
+comment = "R_X86_64_JUMP_SLOT putchar\n"
+decompiled = false
+
 [0x11b8]
 last_change = 2023-12-10T06:55:32.834339Z
 addr = 0x11b8
